--- a/css/estilo.css
+++ b/css/estilo.css
@@ -28,12 +28,35 @@
   border-bottom: 2px solid #ddd;
   padding: 20px;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   gap: 20px;
 }
 
-.main .page .topo .logo {
+.main .page .topo .coluna1 {
+  display: flex;
+  gap: 25px;
+  align-items: center;
+}
+
+.main .page .topo .coluna1 .logo {
   width: 50px;
+}
+
+.main .page .topo .coluna2 {
+  display: flex;
+}
+
+.main .page .topo .coluna2 .btn-login {
+  background-color: #ddd;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.main .page .topo .coluna2 .btn-login:hover {
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
 }
 
 .main .page .conteudo {
