--- a/css/estilo.css
+++ b/css/estilo.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: sans-serif;
+  text-decoration: none;
 }
 
 .main {
@@ -64,20 +65,37 @@
   padding: 20px;
 }
 
+.main .page .conteudo .titulo {
+  margin-bottom: 15px;
+}
+
+.main .page .conteudo .wrapper-tabela {
+  width: 100%;
+  height: 60vh;
+  overflow-y: scroll;
+}
+
 .main .page .conteudo .tabela {
   width: 100%;
   text-align: left;
   border-collapse: collapse;
   border: 2px solid #ddd;
   border-radius: 5px;
-  margin-top: 25px;
 }
 
 .main .page .conteudo .tabela .linha {
   height: 50px;
 }
 
+.main .page .conteudo .tabela .linha.cabecalho {
+  text-align: center;
+  font-weight: bold;
+  background-color: #787878;
+  color: white;
+}
+
 .main .page .conteudo .tabela .coluna {
+  border: 1px solid #ddd;
   padding: 10px;
 }
 
@@ -86,10 +104,26 @@
 }
 
 .main .page .conteudo .tabela .coluna:nth-child(1) {
-  width: 50px;
+  width: 70px;
   text-align: center;
 }
 
 .main .page .conteudo .tabela .coluna:nth-child(3) {
   width: 90px;
+}
+
+.main .page .roda-pe {
+  width: 100%;
+  text-align: center;
+  font-size: 14px;
+  color: #6b6b6b;
+}
+
+.main .page .roda-pe .link {
+  color: #323232;
+}
+
+.main .page .roda-pe .link:hover {
+  color: black;
+  text-shadow: 1px 1px 2px black;
 }
