--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -30,7 +30,7 @@
                 display: flex;
                 gap: 25px;
                 align-items: center;
-                
+
                 .logo {
                     width: 50px;
                 }
@@ -59,20 +59,36 @@
             width: 100%;
             padding: 20px;
 
+            .titulo {
+                margin-bottom: 15px;
+            }
+
+            .wrapper-tabela {
+                width: 100%;
+                height: 60vh;
+                overflow-y: scroll;
+            }
+
             .tabela {
                 width: 100%;
                 text-align: left;
                 border-collapse: collapse;
                 border: 2px solid #ddd;
                 border-radius: 5px;
-                margin-top: 25px;
 
                 .linha {
                     height: 50px;
+
+                    &.cabecalho {
+                        text-align: center;
+                        font-weight: bold;
+                        background-color: rgb(120, 120, 120);
+                        color: white;
+                    }
                 }
 
                 .coluna {
-                    // border: 1px solid #ddd;
+                    border: 1px solid #ddd;
                     padding: 10px;
                 }
 
@@ -83,12 +99,29 @@
 
                 // Muda o tamanho das colunas 1 e 3
                 .coluna:nth-child(1) {
-                    width: 50px;
+                    width: 70px;
                     text-align: center;
                 }
 
                 .coluna:nth-child(3) {
                     width: 90px;
+                }
+            }
+        }
+
+        // Roda pé
+        .roda-pe {
+            width: 100%;
+            text-align: center;
+            font-size: 14px;
+            color: rgb(107, 107, 107);
+
+            .link {
+                color: rgb(50, 50, 50);
+
+                &:hover {
+                    color: black;
+                    text-shadow: 1px 1px 2px black;
                 }
             }
         }
