--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -65,7 +65,7 @@
 
             .wrapper-tabela {
                 width: 100%;
-                height: 60vh;
+                height: calc(100vh - 300px);
                 overflow-y: scroll;
             }
 
@@ -104,7 +104,11 @@
                 }
 
                 .coluna:nth-child(3) {
-                    width: 90px;
+                    width: 120px;
+                }
+                
+                .capa {
+                    width: 50px;
                 }
             }
         }
