--- a/css/estilo.css
+++ b/css/estilo.css
@@ -21,6 +21,7 @@
   border-radius: 10px;
   background-color: #fff;
   box-shadow: 2px 2px 10px #a5a5a5;
+  margin: 0 20px;
 }
 
 .main .page .topo {
@@ -42,6 +43,16 @@
 
 .main .page .topo .coluna1 .logo {
   width: 50px;
+}
+
+.main .page .topo .coluna1 .titulo {
+  transition: .5s;
+}
+
+@media (max-width: 500px) {
+  .main .page .topo .coluna1 .titulo {
+    font-size: 15px;
+  }
 }
 
 .main .page .topo .coluna2 {
