--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1,5 +1,12 @@
 @import 'reset';
 
+// Responsividade;
+@mixin mobile {
+    @media (max-width: 500px) {
+        @content;
+    }
+}
+
 .main {
     width: 100%;
     height: 100vh;
@@ -14,6 +21,7 @@
         border-radius: 10px;
         background-color: #fff;
         box-shadow: 2px 2px 10px rgb(165, 165, 165);
+        margin: 0 20px;
 
         // Cabeçalho
         .topo {
@@ -33,6 +41,14 @@
 
                 .logo {
                     width: 50px;
+                }
+
+                .titulo {
+                    transition: .5s;
+
+                    @include mobile {
+                        font-size: 15px;
+                    }
                 }
             }
 
